Add achievement trait system

--- a/Locales/cz.json
+++ b/Locales/cz.json
@@ -1,30 +1,60 @@
 {
-    "BiaoTi": "排行榜",
-    "DM": "恶魔模式",
-    "DM Description": "切换到恶魔模式或正常模式",
-    "AF": "自动收藏（≥10000战力且上榜）",
-    "AF Description": "开启后符合条件的单位会自动收藏",
-    "Modset": "Mod设置",
-    "WAR_YEARS": "强制宣战间隔（年）",
-    "WAR_YEARS Description": "设置多少年强制爆发一场战争/叛乱（默认30）",
-    "GC_YEARS": "恶魔飞升/大道争锋间隔（年）",
-    "GC_YEARS Description": "设置多少年举办一恶魔飞升次或大道争锋（默认480）",
-    "RESET_LOOP": "世界归零与清图（读档触发一次）",
-    "RESET_LOOP Description": "开=上膛；下次读档/新世界就绪时归零年份并清图，仅此一次并自动卸膛（UI 可能仍显示开但不会再生效）。再次执行：关→开才会生效。关=不干预。",
-    "trait_daozhu": "道主",
-    "trait_daozhu_desc": "大道争锋的执掌者，权威与杀伐并举。",
-    "trait_ascended_demon": "飞升恶魔",
-    "trait_ascended_demon_desc": "历经仪式的恶魔形态，残酷且不朽的意志。",
-    "power_daozhu": "授予：道主",
-    "power_ascended_demon": "授予：飞升恶魔",
-    "DAOZHU_GROUP": "道主",
-    "ASCENDED_DEMON_GROUP": "飞升恶魔",
-    "AUTO_SPAWN": "自动生成生物",
-    "AUTO_SPAWN Description": "开启后，世界会定期自动在地图上生成生物，需要打开世界法则的自动生成动物（默认关闭）。",
-    "WILD_CLEANUP": "野生单位与超级生命清理",
-    "WILD_CLEANUP Description": "默认关闭。开启后：每次年龄更新清除单位的“super_health”特质；对野生王国单位有 10% 概率直接处死。",
-    "STAT_PATCH": "击杀成长属性加成",
-    "STAT_PATCH Description": "开启后：击杀≥10的单位获得每击杀 +100 最大生命与 +2 攻击。默认关闭。"
-
-
+  "BiaoTi": "排行榜",
+  "DM": "恶魔模式",
+  "DM Description": "切换到恶魔模式或正常模式",
+  "AF": "自动收藏（≥10000战力且上榜）",
+  "AF Description": "开启后符合条件的单位会自动收藏",
+  "Modset": "Mod设置",
+  "WAR_YEARS": "强制宣战间隔（年）",
+  "WAR_YEARS Description": "设置多少年强制爆发一场战争/叛乱（默认30）",
+  "GC_YEARS": "恶魔飞升/大道争锋间隔（年）",
+  "GC_YEARS Description": "设置多少年举办一恶魔飞升次或大道争锋（默认480）",
+  "RESET_LOOP": "世界归零与清图（读档触发一次）",
+  "RESET_LOOP Description": "开=上膛；下次读档/新世界就绪时归零年份并清图，仅此一次并自动卸膛（UI 可能仍显示开但不会再生效）。再次执行：关→开才会生效。关=不干预。",
+  "trait_daozhu": "道主",
+  "trait_daozhu_desc": "大道争锋的执掌者，权威与杀伐并举。",
+  "trait_ascended_demon": "飞升恶魔",
+  "trait_ascended_demon_desc": "历经仪式的恶魔形态，残酷且不朽的意志。",
+  "power_daozhu": "授予：道主",
+  "power_ascended_demon": "授予：飞升恶魔",
+  "DAOZHU_GROUP": "道主",
+  "ASCENDED_DEMON_GROUP": "飞升恶魔",
+  "AUTO_SPAWN": "自动生成生物",
+  "AUTO_SPAWN Description": "开启后，世界会定期自动在地图上生成生物，需要打开世界法则的自动生成动物（默认关闭）。",
+  "WILD_CLEANUP": "野生单位与超级生命清理",
+  "WILD_CLEANUP Description": "默认关闭。开启后：每次年龄更新清除单位的“super_health”特质；对野生王国单位有 10% 概率直接处死。",
+  "STAT_PATCH": "击杀成长属性加成",
+  "STAT_PATCH Description": "开启后：击杀≥10的单位获得每击杀 +100 最大生命与 +2 攻击。默认关闭。",
+  "trait_first_blood": "初露锋芒",
+  "trait_first_blood_desc": "完成第10次击杀，潜能觉醒。",
+  "trait_hundred_souls": "百人斩",
+  "trait_hundred_souls_desc": "击杀数达到100，名声初显。",
+  "trait_thousand_kill": "千人屠",
+  "trait_thousand_kill_desc": "击杀数达到1000，气焰滔天。",
+  "trait_chosen_of_providence": "天命候选人",
+  "trait_chosen_of_providence_desc": "被天地法则强行选中参与仪式。",
+  "trait_whispers_from_the_abyss": "深渊低语",
+  "trait_whispers_from_the_abyss_desc": "被恶魔使徒的事件所波及。",
+  "trait_path_of_battle": "以战成道",
+  "trait_path_of_battle_desc": "在大道争锋中击败至少一名候选者。",
+  "trait_ageless": "不朽之始",
+  "trait_ageless_desc": "年龄超过500岁且战力超过10万。",
+  "trait_flesh_of_the_divine": "肉身成圣",
+  "trait_flesh_of_the_divine_desc": "实时战力突破1亿点。",
+  "trait_incarnation_of_slaughter": "杀戮化身",
+  "trait_incarnation_of_slaughter_desc": "总击杀数达到10万，凝成诅咒力场。",
+  "trait_world_eater": "蚀界者",
+  "trait_world_eater_desc": "同时达成肉身成圣与杀戮化身，开始吞蚀世界。",
+  "trait_ascended_one": "飞升者",
+  "trait_ascended_one_desc": "赢得仪式，蜕变为大恶魔或道主。",
+  "trait_fallen_ascension": "堕落飞升",
+  "trait_fallen_ascension_desc": "飞升仪式意外，形态扭曲。",
+  "trait_godslayer": "屠魔者",
+  "trait_godslayer_desc": "以凡俗之躯击杀飞升者。",
+  "trait_eternal_legend": "永恒传奇",
+  "trait_eternal_legend_desc": "不借外力屹立世界之巅。",
+  "MORTAL_COIL_GROUP": "凡躯砺炼",
+  "DESTINY_GROUP": "天命昭示",
+  "BEYOND_MORTALITY_GROUP": "非人之境",
+  "END_PATH_GROUP": "终焉归途"
 }
