--- a/Locales/en.json
+++ b/Locales/en.json
@@ -1,29 +1,60 @@
 {
-    "BiaoTi": "Leaderboard",
-    "DM": "Demon Mode",
-    "DM Description": "Switch between Demon Mode and Normal Mode",
-    "AF": "Auto-Favorite (≥10000 Power and Ranked)",
-    "AF Description": "Automatically favorites units that meet the conditions",
-    "Modset": "Mod Settings",
-    "WAR_YEARS": "Forced War Interval (Years)",
-    "WAR_YEARS Description": "Set how many years before a war/rebellion must break out (default 30)",
-    "GC_YEARS": "Demon Ascension/Great Contest Interval (Years)",
-    "GC_YEARS Description": "Set how many years before hosting a Demon Ascension or Great Contest (default 480)",
-    "RESET_LOOP": "World Year Reset & Purge (triggers once on next load)",
-    "RESET_LOOP Description": "On = armed. On the next load/new world, sets the world year to 0 and purges all units, one time only, then auto-disarms (the UI may still show On but it won’t trigger again). To run again: toggle Off → On. Off = no action.",
-    "trait_daozhu": "Dao Master",
-    "trait_daozhu_desc": "Bearer of the Great Contest’s mandate; authority sharpened by blood.",
-    "trait_ascended_demon": "Ascended Demon",
-    "trait_ascended_demon_desc": "A form forged by ascension rites, brimming with ruthless will.",
-    "power_daozhu": "Grant: Dao Master",
-    "power_ascended_demon": "Grant: Ascended Demon",
-    "DAOZHU_GROUP": "Dao Master",
-    "ASCENDED_DEMON_GROUP": "Ascended Demon",
-    "AUTO_SPAWN": "Auto-Spawn Units",
-    "AUTO_SPAWN Description": "When enabled, the world will periodically auto-spawn random units on the map. Requires World Law: Auto-Spawn Animals to be active (default Off).",
-    "WILD_CLEANUP": "Wild-unit & Super-health Cleanup",
-    "WILD_CLEANUP Description": "Default OFF. When enabled: removes the 'super_health' trait on each age update and culls 10% of units belonging to wild kingdoms.",
-    "STAT_PATCH": "Kill-Scaling Stat Bonus",
-    "STAT_PATCH Description": "When enabled: units with ≥10 kills gain +100 Max HP and +2 Damage per kill. Off by default."
-
+  "BiaoTi": "Leaderboard",
+  "DM": "Demon Mode",
+  "DM Description": "Switch between Demon Mode and Normal Mode",
+  "AF": "Auto-Favorite (≥10000 Power and Ranked)",
+  "AF Description": "Automatically favorites units that meet the conditions",
+  "Modset": "Mod Settings",
+  "WAR_YEARS": "Forced War Interval (Years)",
+  "WAR_YEARS Description": "Set how many years before a war/rebellion must break out (default 30)",
+  "GC_YEARS": "Demon Ascension/Great Contest Interval (Years)",
+  "GC_YEARS Description": "Set how many years before hosting a Demon Ascension or Great Contest (default 480)",
+  "RESET_LOOP": "World Year Reset & Purge (triggers once on next load)",
+  "RESET_LOOP Description": "On = armed. On the next load/new world, sets the world year to 0 and purges all units, one time only, then auto-disarms (the UI may still show On but it won’t trigger again). To run again: toggle Off → On. Off = no action.",
+  "trait_daozhu": "Dao Master",
+  "trait_daozhu_desc": "Bearer of the Great Contest’s mandate; authority sharpened by blood.",
+  "trait_ascended_demon": "Ascended Demon",
+  "trait_ascended_demon_desc": "A form forged by ascension rites, brimming with ruthless will.",
+  "power_daozhu": "Grant: Dao Master",
+  "power_ascended_demon": "Grant: Ascended Demon",
+  "DAOZHU_GROUP": "Dao Master",
+  "ASCENDED_DEMON_GROUP": "Ascended Demon",
+  "AUTO_SPAWN": "Auto-Spawn Units",
+  "AUTO_SPAWN Description": "When enabled, the world will periodically auto-spawn random units on the map. Requires World Law: Auto-Spawn Animals to be active (default Off).",
+  "WILD_CLEANUP": "Wild-unit & Super-health Cleanup",
+  "WILD_CLEANUP Description": "Default OFF. When enabled: removes the 'super_health' trait on each age update and culls 10% of units belonging to wild kingdoms.",
+  "STAT_PATCH": "Kill-Scaling Stat Bonus",
+  "STAT_PATCH Description": "When enabled: units with ≥10 kills gain +100 Max HP and +2 Damage per kill. Off by default.",
+  "trait_first_blood": "First Blood",
+  "trait_first_blood_desc": "10 kills awaken latent power.",
+  "trait_hundred_souls": "A Hundred Souls",
+  "trait_hundred_souls_desc": "Feared after felling a hundred.",
+  "trait_thousand_kill": "The Thousandth Kill",
+  "trait_thousand_kill_desc": "A living legend with a thousand kills.",
+  "trait_chosen_of_providence": "Chosen of Providence",
+  "trait_chosen_of_providence_desc": "Drafted by the world's unyielding laws.",
+  "trait_whispers_from_the_abyss": "Whispers from the Abyss",
+  "trait_whispers_from_the_abyss_desc": "Brushed by chilling demonic whispers.",
+  "trait_path_of_battle": "The Path of Battle",
+  "trait_path_of_battle_desc": "Defeated a fellow candidate in the rite.",
+  "trait_ageless": "Ageless",
+  "trait_ageless_desc": "Five centuries and still unscarred.",
+  "trait_flesh_of_the_divine": "Flesh of the Divine",
+  "trait_flesh_of_the_divine_desc": "Power surpasses one hundred million.",
+  "trait_incarnation_of_slaughter": "Incarnation of Slaughter",
+  "trait_incarnation_of_slaughter_desc": "One hundred thousand kills curse the air.",
+  "trait_world_eater": "World-Eater",
+  "trait_world_eater_desc": "Divine flesh and endless slaughter erode the world.",
+  "trait_ascended_one": "The Ascended One",
+  "trait_ascended_one_desc": "Won the rite and became more than mortal.",
+  "trait_fallen_ascension": "Fallen Ascension",
+  "trait_fallen_ascension_desc": "A twisted failure of ascension.",
+  "trait_godslayer": "Godslayer",
+  "trait_godslayer_desc": "Slew an ascended demon while still mortal.",
+  "trait_eternal_legend": "Eternal Legend",
+  "trait_eternal_legend_desc": "Stood atop the world unaided by ascension.",
+  "MORTAL_COIL_GROUP": "Tempering the Mortal Coil",
+  "DESTINY_GROUP": "The Call of Destiny",
+  "BEYOND_MORTALITY_GROUP": "Beyond Mortality",
+  "END_PATH_GROUP": "The End of the Path"
 }
