--- a/Locales/cz.json
+++ b/Locales/cz.json
@@ -1,60 +1,201 @@
 {
-  "BiaoTi": "排行榜",
-  "DM": "恶魔模式",
-  "DM Description": "切换到恶魔模式或正常模式",
-  "AF": "自动收藏（≥10000战力且上榜）",
-  "AF Description": "开启后符合条件的单位会自动收藏",
-  "Modset": "Mod设置",
-  "WAR_YEARS": "强制宣战间隔（年）",
-  "WAR_YEARS Description": "设置多少年强制爆发一场战争/叛乱（默认30）",
-  "GC_YEARS": "恶魔飞升/大道争锋间隔（年）",
-  "GC_YEARS Description": "设置多少年举办一恶魔飞升次或大道争锋（默认480）",
-  "RESET_LOOP": "世界归零与清图（读档触发一次）",
-  "RESET_LOOP Description": "开=上膛；下次读档/新世界就绪时归零年份并清图，仅此一次并自动卸膛（UI 可能仍显示开但不会再生效）。再次执行：关→开才会生效。关=不干预。",
-  "trait_daozhu": "道主",
-  "trait_daozhu_desc": "大道争锋的执掌者，权威与杀伐并举。",
-  "trait_ascended_demon": "飞升恶魔",
-  "trait_ascended_demon_desc": "历经仪式的恶魔形态，残酷且不朽的意志。",
-  "power_daozhu": "授予：道主",
-  "power_ascended_demon": "授予：飞升恶魔",
-  "DAOZHU_GROUP": "道主",
-  "ASCENDED_DEMON_GROUP": "飞升恶魔",
-  "AUTO_SPAWN": "自动生成生物",
-  "AUTO_SPAWN Description": "开启后，世界会定期自动在地图上生成生物，需要打开世界法则的自动生成动物（默认关闭）。",
-  "WILD_CLEANUP": "野生单位与超级生命清理",
-  "WILD_CLEANUP Description": "默认关闭。开启后：每次年龄更新清除单位的“super_health”特质；对野生王国单位有 10% 概率直接处死。",
-  "STAT_PATCH": "击杀成长属性加成",
-  "STAT_PATCH Description": "开启后：击杀≥10的单位获得每击杀 +100 最大生命与 +2 攻击。默认关闭。",
-  "trait_first_blood": "初露锋芒",
-  "trait_first_blood_desc": "完成第10次击杀，潜能觉醒。",
-  "trait_hundred_souls": "百人斩",
-  "trait_hundred_souls_desc": "击杀数达到100，名声初显。",
-  "trait_thousand_kill": "千人屠",
-  "trait_thousand_kill_desc": "击杀数达到1000，气焰滔天。",
-  "trait_chosen_of_providence": "天命候选人",
-  "trait_chosen_of_providence_desc": "被天地法则强行选中参与仪式。",
-  "trait_whispers_from_the_abyss": "深渊低语",
-  "trait_whispers_from_the_abyss_desc": "被恶魔使徒的事件所波及。",
-  "trait_path_of_battle": "以战成道",
-  "trait_path_of_battle_desc": "在大道争锋中击败至少一名候选者。",
-  "trait_ageless": "不朽之始",
-  "trait_ageless_desc": "年龄超过500岁且战力超过10万。",
-  "trait_flesh_of_the_divine": "肉身成圣",
-  "trait_flesh_of_the_divine_desc": "实时战力突破1亿点。",
-  "trait_incarnation_of_slaughter": "杀戮化身",
-  "trait_incarnation_of_slaughter_desc": "总击杀数达到10万，凝成诅咒力场。",
-  "trait_world_eater": "蚀界者",
-  "trait_world_eater_desc": "同时达成肉身成圣与杀戮化身，开始吞蚀世界。",
-  "trait_ascended_one": "飞升者",
-  "trait_ascended_one_desc": "赢得仪式，蜕变为大恶魔或道主。",
-  "trait_fallen_ascension": "堕落飞升",
-  "trait_fallen_ascension_desc": "飞升仪式意外，形态扭曲。",
-  "trait_godslayer": "屠魔者",
-  "trait_godslayer_desc": "以凡俗之躯击杀飞升者。",
-  "trait_eternal_legend": "永恒传奇",
-  "trait_eternal_legend_desc": "不借外力屹立世界之巅。",
-  "MORTAL_COIL_GROUP": "凡躯砺炼",
-  "DESTINY_GROUP": "天命昭示",
-  "BEYOND_MORTALITY_GROUP": "非人之境",
-  "END_PATH_GROUP": "终焉归途"
+    "BiaoTi": "排行榜",
+    "DM": "恶魔模式",
+    "DM Description": "切换到恶魔模式或正常模式",
+    "AF": "自动收藏（≥10000战力且上榜）",
+    "AF Description": "开启后符合条件的单位会自动收藏",
+    "Modset": "Mod设置",
+    "WAR_YEARS": "强制宣战间隔（年）",
+    "WAR_YEARS Description": "设置多少年强制爆发一场战争/叛乱（默认30）",
+    "GC_YEARS": "恶魔飞升/大道争锋间隔（年）",
+    "GC_YEARS Description": "设置多少年举办一恶魔飞升次或大道争锋（默认480）",
+    "RESET_LOOP": "世界归零与清图（读档触发一次，用完记得关）",
+    "RESET_LOOP Description": "开=上膛；下次读档/新世界就绪时归零年份并清图，仅此一次并自动卸膛（UI 可能仍显示开但不会再生效）。再次执行：关→开才会生效。关=不干预。",
+    "AUTO_SPAWN": "自动生成生物",
+    "AUTO_SPAWN Description": "开启后，世界会定期自动在地图上生成生物，需要打开世界法则的自动生成动物（默认关闭）。",
+    "WILD_CLEANUP": "野生单位与超级生命清理",
+    "WILD_CLEANUP Description": "默认关闭。开启后：每次年龄更新清除单位的“超级生命”特质；对野生单位有 50% 概率直接处死。",
+    "STAT_PATCH": "击杀数主宰",
+    "STAT_PATCH Description": "开启后：击杀≥10的单位获得每击杀 +100 最大生命与 +2 攻击，大部分特质属性加成失效。默认关闭。",
+    "DAOZHU_GROUP": "道主",
+    "ASCENDED_DEMON_GROUP": "飞升恶魔",
+    "MORTAL_COIL_GROUP": "凡躯砺炼",
+    "DESTINY_GROUP": "天命昭示",
+    "BEYOND_MORTALITY_GROUP": "非人之境",
+    "END_PATH_GROUP": "终焉归途",
+    "ROGUE_LIGHT_GROUP": "基础",
+
+    "trait_group_daozhu_group": "道主",
+    "trait_group_ascended_demon_group": "飞升恶魔",
+    "trait_group_mortal_coil_group": "凡躯砺炼",
+    "trait_group_destiny_group": "天命昭示",
+    "trait_group_beyond_mortality_group": "非人之境",
+    "trait_group_end_path_group": "终焉归途",
+    "trait_group_rogue_light_group": "基础",
+
+    "power_daozhu": "授予：道主",
+    "power_ascended_demon": "授予：飞升恶魔",
+
+    "trait_daozhu": "道主",
+    "trait_daozhu_desc": "大道争锋的执掌者，权威与杀伐并举。",
+    "trait_daozhu_description": "大道争锋的执掌者，权威与杀伐并举。",
+    "trait_daozhu_tooltip": "大道争锋的执掌者，权威与杀伐并举。",
+    "trait_daozhu_info": "大道争锋的执掌者，权威与杀伐并举。",
+
+    "trait_ascended_demon": "飞升恶魔",
+    "trait_ascended_demon_desc": "历经仪式的恶魔形态，残酷且不朽的意志。",
+    "trait_ascended_demon_description": "历经仪式的恶魔形态，残酷且不朽的意志。",
+    "trait_ascended_demon_tooltip": "历经仪式的恶魔形态，残酷且不朽的意志。",
+    "trait_ascended_demon_info": "历经仪式的恶魔形态，残酷且不朽的意志。",
+
+    "trait_first_blood": "初露锋芒",
+    "trait_first_blood_desc": "完成第10次击杀，潜能觉醒。",
+    "trait_first_blood_description": "完成第10次击杀，潜能觉醒。",
+    "trait_first_blood_tooltip": "完成第10次击杀，潜能觉醒。",
+    "trait_first_blood_info": "完成第10次击杀，潜能觉醒。",
+
+    "trait_hundred_souls": "百人斩",
+    "trait_hundred_souls_desc": "击杀数达到100，名声初显。",
+    "trait_hundred_souls_description": "击杀数达到100，名声初显。",
+    "trait_hundred_souls_tooltip": "击杀数达到100，名声初显。",
+    "trait_hundred_souls_info": "击杀数达到100，名声初显。",
+
+    "trait_thousand_kill": "千人屠",
+    "trait_thousand_kill_desc": "击杀数达到1000，气焰滔天。",
+    "trait_thousand_kill_description": "击杀数达到1000，气焰滔天。",
+    "trait_thousand_kill_tooltip": "击杀数达到1000，气焰滔天。",
+    "trait_thousand_kill_info": "击杀数达到1000，气焰滔天。",
+
+    "trait_chosen_of_providence": "天命候选人",
+    "trait_chosen_of_providence_desc": "被天地法则强行选中参与仪式。",
+    "trait_chosen_of_providence_description": "被天地法则强行选中参与仪式。",
+    "trait_chosen_of_providence_tooltip": "被天地法则强行选中参与仪式。",
+    "trait_chosen_of_providence_info": "被天地法则强行选中参与仪式。",
+
+    "trait_whispers_from_the_abyss": "深渊低语",
+    "trait_whispers_from_the_abyss_desc": "被恶魔使徒的事件所波及。",
+    "trait_whispers_from_the_abyss_description": "被恶魔使徒的事件所波及。",
+    "trait_whispers_from_the_abyss_tooltip": "被恶魔使徒的事件所波及。",
+    "trait_whispers_from_the_abyss_info": "被恶魔使徒的事件所波及。",
+
+    "trait_path_of_battle": "以战成道",
+    "trait_path_of_battle_desc": "在大道争锋中击败至少一名候选者。",
+    "trait_path_of_battle_description": "在大道争锋中击败至少一名候选者。",
+    "trait_path_of_battle_tooltip": "在大道争锋中击败至少一名候选者。",
+    "trait_path_of_battle_info": "在大道争锋中击败至少一名候选者。",
+
+    "trait_ageless": "不朽之始",
+    "trait_ageless_desc": "年龄超过500岁且战力超过10万。",
+    "trait_ageless_description": "年龄超过500岁且战力超过10万。",
+    "trait_ageless_tooltip": "年龄超过500岁且战力超过10万。",
+    "trait_ageless_info": "年龄超过500岁且战力超过10万。",
+
+    "trait_flesh_of_the_divine": "肉身成圣",
+    "trait_flesh_of_the_divine_desc": "实时战力突破1亿点。",
+    "trait_flesh_of_the_divine_description": "实时战力突破1亿点。",
+    "trait_flesh_of_the_divine_tooltip": "实时战力突破1亿点。",
+    "trait_flesh_of_the_divine_info": "实时战力突破1亿点。",
+
+    "trait_incarnation_of_slaughter": "杀戮化身",
+    "trait_incarnation_of_slaughter_desc": "总击杀数达到10万，凝成诅咒力场。",
+    "trait_incarnation_of_slaughter_description": "总击杀数达到10万，凝成诅咒力场。",
+    "trait_incarnation_of_slaughter_tooltip": "总击杀数达到10万，凝成诅咒力场。",
+    "trait_incarnation_of_slaughter_info": "总击杀数达到10万，凝成诅咒力场。",
+
+    "trait_world_eater": "蚀界者",
+    "trait_world_eater_desc": "同时达成肉身成圣与杀戮化身，开始吞蚀世界。",
+    "trait_world_eater_description": "同时达成肉身成圣与杀戮化身，开始吞蚀世界。",
+    "trait_world_eater_tooltip": "同时达成肉身成圣与杀戮化身，开始吞蚀世界。",
+    "trait_world_eater_info": "同时达成肉身成圣与杀戮化身，开始吞蚀世界。",
+
+    "trait_ascended_one": "飞升者",
+    "trait_ascended_one_desc": "赢得仪式，蜕变为大恶魔或道主。",
+    "trait_ascended_one_description": "赢得仪式，蜕变为大恶魔或道主。",
+    "trait_ascended_one_tooltip": "赢得仪式，蜕变为大恶魔或道主。",
+    "trait_ascended_one_info": "赢得仪式，蜕变为大恶魔或道主。",
+
+    "trait_fallen_ascension": "堕落飞升",
+    "trait_fallen_ascension_desc": "飞升仪式意外，形态扭曲。",
+    "trait_fallen_ascension_description": "飞升仪式意外，形态扭曲。",
+    "trait_fallen_ascension_tooltip": "飞升仪式意外，形态扭曲。",
+    "trait_fallen_ascension_info": "飞升仪式意外，形态扭曲。",
+
+    "trait_godslayer": "屠魔者",
+    "trait_godslayer_desc": "以凡俗之躯击杀飞升者。",
+    "trait_godslayer_description": "以凡俗之躯击杀飞升者。",
+    "trait_godslayer_tooltip": "以凡俗之躯击杀飞升者。",
+    "trait_godslayer_info": "以凡俗之躯击杀飞升者。",
+
+    "trait_eternal_legend": "永恒传奇",
+    "trait_eternal_legend_desc": "不借外力屹立世界之巅。",
+    "trait_eternal_legend_description": "不借外力屹立世界之巅。",
+    "trait_eternal_legend_tooltip": "不借外力屹立世界之巅。",
+    "trait_eternal_legend_info": "不借外力屹立世界之巅。",
+
+    "trait_rogue_kill_plus_one": "战场收割者",
+    "trait_rogue_kill_plus_one_desc": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
+    "trait_rogue_kill_plus_one_description": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
+    "trait_rogue_kill_plus_one_tooltip": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
+    "trait_rogue_kill_plus_one_info": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
+
+    "trait_rogue_kill_lucky10": "幸运劫掠",
+    "trait_rogue_kill_lucky10_desc": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
+    "trait_rogue_kill_lucky10_description": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
+    "trait_rogue_kill_lucky10_tooltip": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
+    "trait_rogue_kill_lucky10_info": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
+
+    "trait_rogue_starter_boost": "起步加成",
+    "trait_rogue_starter_boost_desc": "开局获得小幅生命与攻击加成。",
+    "trait_rogue_starter_boost_description": "开局获得小幅生命与攻击加成。",
+    "trait_rogue_starter_boost_tooltip": "开局获得小幅生命与攻击加成。",
+    "trait_rogue_starter_boost_info": "开局获得小幅生命与攻击加成。",
+
+    "trait_rogue_swift": "迅捷",
+    "trait_rogue_swift_desc": "移动速度略微提升。",
+    "trait_rogue_swift_description": "移动速度略微提升。",
+    "trait_rogue_swift_tooltip": "移动速度略微提升。",
+    "trait_rogue_swift_info": "移动速度略微提升。",
+
+    "trait_rogue_keen": "灵锐",
+    "trait_rogue_keen_desc": "暴击率略微提升。",
+    "trait_rogue_keen_description": "暴击率略微提升。",
+    "trait_rogue_keen_tooltip": "暴击率略微提升。",
+    "trait_rogue_keen_info": "暴击率略微提升。",
+
+    "trait_rogue_tough": "坚毅",
+    "trait_rogue_tough_desc": "护甲略微提升。",
+    "trait_rogue_tough_description": "护甲略微提升。",
+    "trait_rogue_tough_tooltip": "护甲略微提升。",
+    "trait_rogue_tough_info": "护甲略微提升。",
+
+    "trait_rogue_enduring": "持久",
+    "trait_rogue_enduring_desc": "体力上限略微提升。",
+    "trait_rogue_enduring_description": "体力上限略微提升。",
+    "trait_rogue_enduring_tooltip": "体力上限略微提升。",
+    "trait_rogue_enduring_info": "体力上限略微提升。",
+
+    "trait_rogue_longlife": "长寿",
+    "trait_rogue_longlife_desc": "自然寿命提升。",
+    "trait_rogue_longlife_description": "自然寿命提升。",
+    "trait_rogue_longlife_tooltip": "自然寿命提升。",
+    "trait_rogue_longlife_info": "自然寿命提升。",
+
+    "trait_rogue_lightstrike": "轻斩",
+    "trait_rogue_lightstrike_desc": "基础伤害小幅提升。",
+    "trait_rogue_lightstrike_description": "基础伤害小幅提升。",
+    "trait_rogue_lightstrike_tooltip": "基础伤害小幅提升。",
+    "trait_rogue_lightstrike_info": "基础伤害小幅提升。",
+
+    "trait_rogue_guarded": "厚实",
+    "trait_rogue_guarded_desc": "生命上限小幅提升。",
+    "trait_rogue_guarded_description": "生命上限小幅提升。",
+    "trait_rogue_guarded_tooltip": "生命上限小幅提升。",
+    "trait_rogue_guarded_info": "生命上限小幅提升。",
+
+    "trait_rogue_heal_on_kill": "击杀回春",
+    "trait_rogue_heal_on_kill_desc": "击杀后回复少量生命。",
+    "trait_rogue_heal_on_kill_description": "击杀后回复少量生命。",
+    "trait_rogue_heal_on_kill_tooltip": "击杀后回复少量生命。",
+    "trait_rogue_heal_on_kill_info": "击杀后回复少量生命。"
+
 }
