--- a/Locales/en.json
+++ b/Locales/en.json
@@ -1,60 +1,201 @@
 {
-  "BiaoTi": "Leaderboard",
-  "DM": "Demon Mode",
-  "DM Description": "Switch between Demon Mode and Normal Mode",
-  "AF": "Auto-Favorite (≥10000 Power and Ranked)",
-  "AF Description": "Automatically favorites units that meet the conditions",
-  "Modset": "Mod Settings",
-  "WAR_YEARS": "Forced War Interval (Years)",
-  "WAR_YEARS Description": "Set how many years before a war/rebellion must break out (default 30)",
-  "GC_YEARS": "Demon Ascension/Great Contest Interval (Years)",
-  "GC_YEARS Description": "Set how many years before hosting a Demon Ascension or Great Contest (default 480)",
-  "RESET_LOOP": "World Year Reset & Purge (triggers once on next load)",
-  "RESET_LOOP Description": "On = armed. On the next load/new world, sets the world year to 0 and purges all units, one time only, then auto-disarms (the UI may still show On but it won’t trigger again). To run again: toggle Off → On. Off = no action.",
-  "trait_daozhu": "Dao Master",
-  "trait_daozhu_desc": "Bearer of the Great Contest’s mandate; authority sharpened by blood.",
-  "trait_ascended_demon": "Ascended Demon",
-  "trait_ascended_demon_desc": "A form forged by ascension rites, brimming with ruthless will.",
-  "power_daozhu": "Grant: Dao Master",
-  "power_ascended_demon": "Grant: Ascended Demon",
-  "DAOZHU_GROUP": "Dao Master",
-  "ASCENDED_DEMON_GROUP": "Ascended Demon",
-  "AUTO_SPAWN": "Auto-Spawn Units",
-  "AUTO_SPAWN Description": "When enabled, the world will periodically auto-spawn random units on the map. Requires World Law: Auto-Spawn Animals to be active (default Off).",
-  "WILD_CLEANUP": "Wild-unit & Super-health Cleanup",
-  "WILD_CLEANUP Description": "Default OFF. When enabled: removes the 'super_health' trait on each age update and culls 10% of units belonging to wild kingdoms.",
-  "STAT_PATCH": "Kill-Scaling Stat Bonus",
-  "STAT_PATCH Description": "When enabled: units with ≥10 kills gain +100 Max HP and +2 Damage per kill. Off by default.",
-  "trait_first_blood": "First Blood",
-  "trait_first_blood_desc": "10 kills awaken latent power.",
-  "trait_hundred_souls": "A Hundred Souls",
-  "trait_hundred_souls_desc": "Feared after felling a hundred.",
-  "trait_thousand_kill": "The Thousandth Kill",
-  "trait_thousand_kill_desc": "A living legend with a thousand kills.",
-  "trait_chosen_of_providence": "Chosen of Providence",
-  "trait_chosen_of_providence_desc": "Drafted by the world's unyielding laws.",
-  "trait_whispers_from_the_abyss": "Whispers from the Abyss",
-  "trait_whispers_from_the_abyss_desc": "Brushed by chilling demonic whispers.",
-  "trait_path_of_battle": "The Path of Battle",
-  "trait_path_of_battle_desc": "Defeated a fellow candidate in the rite.",
-  "trait_ageless": "Ageless",
-  "trait_ageless_desc": "Five centuries and still unscarred.",
-  "trait_flesh_of_the_divine": "Flesh of the Divine",
-  "trait_flesh_of_the_divine_desc": "Power surpasses one hundred million.",
-  "trait_incarnation_of_slaughter": "Incarnation of Slaughter",
-  "trait_incarnation_of_slaughter_desc": "One hundred thousand kills curse the air.",
-  "trait_world_eater": "World-Eater",
-  "trait_world_eater_desc": "Divine flesh and endless slaughter erode the world.",
-  "trait_ascended_one": "The Ascended One",
-  "trait_ascended_one_desc": "Won the rite and became more than mortal.",
-  "trait_fallen_ascension": "Fallen Ascension",
-  "trait_fallen_ascension_desc": "A twisted failure of ascension.",
-  "trait_godslayer": "Godslayer",
-  "trait_godslayer_desc": "Slew an ascended demon while still mortal.",
-  "trait_eternal_legend": "Eternal Legend",
-  "trait_eternal_legend_desc": "Stood atop the world unaided by ascension.",
-  "MORTAL_COIL_GROUP": "Tempering the Mortal Coil",
-  "DESTINY_GROUP": "The Call of Destiny",
-  "BEYOND_MORTALITY_GROUP": "Beyond Mortality",
-  "END_PATH_GROUP": "The End of the Path"
+    "BiaoTi": "Leaderboard",
+    "DM": "Demon Mode",
+    "DM Description": "Toggle Demon Mode on or off.",
+    "AF": "Auto-Favorite (≥10,000 power & on board)",
+    "AF Description": "When enabled, units that meet the condition will be auto-favorited.",
+    "Modset": "Mod Settings",
+    "WAR_YEARS": "Forced war interval (years)",
+    "WAR_YEARS Description": "How many years between a forced war/rebellion (default 30).",
+    "GC_YEARS": "Demon Ascension / Grand Contest interval (years)",
+    "GC_YEARS Description": "How many years between an Ascension or Grand Contest (default 480).",
+    "RESET_LOOP": "World reset & map cleanup (fires once on load; turn off after use)",
+    "RESET_LOOP Description": "On = armed; next load/new world zeroes the year and cleans the map once, then disarms (UI may still show On). To trigger again: OFF → ON. Off = no interference.",
+    "AUTO_SPAWN": "Auto-spawn creatures",
+    "AUTO_SPAWN Description": "When enabled, the world periodically spawns creatures; requires the world rule for auto animal spawning (default off).",
+    "WILD_CLEANUP": "Wild unit & super-life cleanup",
+    "WILD_CLEANUP Description": "Default OFF. When ON: removes the “super_health” trait on each age update; 10% chance to instantly kill units from wild kingdoms.",
+    "STAT_PATCH": "Kill-Driven Stats",
+    "STAT_PATCH Description": "When ON: units with ≥10 kills gain +100 max HP and +2 damage per kill; some trait bonuses are disabled. Default OFF.",
+
+    "DAOZHU_GROUP": "Dao Master",
+    "ASCENDED_DEMON_GROUP": "Ascended Demon",
+    "MORTAL_COIL_GROUP": "Mortal Tempering",
+    "DESTINY_GROUP": "Decrees of Fate",
+    "BEYOND_MORTALITY_GROUP": "Beyond Mortality",
+    "END_PATH_GROUP": "End of Path",
+    "ROGUE_LIGHT_GROUP": "Basics",
+
+    "trait_group_daozhu_group": "Dao Master",
+    "trait_group_ascended_demon_group": "Ascended Demon",
+    "trait_group_mortal_coil_group": "Mortal Tempering",
+    "trait_group_destiny_group": "Decrees of Fate",
+    "trait_group_beyond_mortality_group": "Beyond Mortality",
+    "trait_group_end_path_group": "End of Path",
+    "trait_group_rogue_light_group": "Basics",
+
+    "power_daozhu": "Granted: Dao Master",
+    "power_ascended_demon": "Granted: Ascended Demon",
+
+    "trait_daozhu": "Dao Master",
+    "trait_daozhu_desc": "Ruler of the Grand Contest; authority and slaughter combined.",
+    "trait_daozhu_description": "Ruler of the Grand Contest; authority and slaughter combined.",
+    "trait_daozhu_tooltip": "Ruler of the Grand Contest; authority and slaughter combined.",
+    "trait_daozhu_info": "Ruler of the Grand Contest; authority and slaughter combined.",
+
+    "trait_ascended_demon": "Ascended Demon",
+    "trait_ascended_demon_desc": "A form born of the ritual—cruel and undying will.",
+    "trait_ascended_demon_description": "A form born of the ritual—cruel and undying will.",
+    "trait_ascended_demon_tooltip": "A form born of the ritual—cruel and undying will.",
+    "trait_ascended_demon_info": "A form born of the ritual—cruel and undying will.",
+
+    "trait_first_blood": "First Blood",
+    "trait_first_blood_desc": "Reach 10 kills; latent power awakens.",
+    "trait_first_blood_description": "Reach 10 kills; latent power awakens.",
+    "trait_first_blood_tooltip": "Reach 10 kills; latent power awakens.",
+    "trait_first_blood_info": "Reach 10 kills; latent power awakens.",
+
+    "trait_hundred_souls": "Hundred Souls",
+    "trait_hundred_souls_desc": "Reach 100 kills; reputation begins to spread.",
+    "trait_hundred_souls_description": "Reach 100 kills; reputation begins to spread.",
+    "trait_hundred_souls_tooltip": "Reach 100 kills; reputation begins to spread.",
+    "trait_hundred_souls_info": "Reach 100 kills; reputation begins to spread.",
+
+    "trait_thousand_kill": "Thousand Kill",
+    "trait_thousand_kill_desc": "Reach 1000 kills; your aura surges.",
+    "trait_thousand_kill_description": "Reach 1000 kills; your aura surges.",
+    "trait_thousand_kill_tooltip": "Reach 1000 kills; your aura surges.",
+    "trait_thousand_kill_info": "Reach 1000 kills; your aura surges.",
+
+    "trait_chosen_of_providence": "Chosen of Providence",
+    "trait_chosen_of_providence_desc": "Forced by the world’s law to join the ritual.",
+    "trait_chosen_of_providence_description": "Forced by the world’s law to join the ritual.",
+    "trait_chosen_of_providence_tooltip": "Forced by the world’s law to join the ritual.",
+    "trait_chosen_of_providence_info": "Forced by the world’s law to join the ritual.",
+
+    "trait_whispers_from_the_abyss": "Whispers from the Abyss",
+    "trait_whispers_from_the_abyss_desc": "Affected by the Demon Apostle event.",
+    "trait_whispers_from_the_abyss_description": "Affected by the Demon Apostle event.",
+    "trait_whispers_from_the_abyss_tooltip": "Affected by the Demon Apostle event.",
+    "trait_whispers_from_the_abyss_info": "Affected by the Demon Apostle event.",
+
+    "trait_path_of_battle": "Path of Battle",
+    "trait_path_of_battle_desc": "Defeated at least one contender in the Grand Contest.",
+    "trait_path_of_battle_description": "Defeated at least one contender in the Grand Contest.",
+    "trait_path_of_battle_tooltip": "Defeated at least one contender in the Grand Contest.",
+    "trait_path_of_battle_info": "Defeated at least one contender in the Grand Contest.",
+
+    "trait_ageless": "Ageless",
+    "trait_ageless_desc": "At least 500 years old and power above 100,000.",
+    "trait_ageless_description": "At least 500 years old and power above 100,000.",
+    "trait_ageless_tooltip": "At least 500 years old and power above 100,000.",
+    "trait_ageless_info": "At least 500 years old and power above 100,000.",
+
+    "trait_flesh_of_the_divine": "Flesh of the Divine",
+    "trait_flesh_of_the_divine_desc": "Realtime power exceeds 100,000,000.",
+    "trait_flesh_of_the_divine_description": "Realtime power exceeds 100,000,000.",
+    "trait_flesh_of_the_divine_tooltip": "Realtime power exceeds 100,000,000.",
+    "trait_flesh_of_the_divine_info": "Realtime power exceeds 100,000,000.",
+
+    "trait_incarnation_of_slaughter": "Incarnation of Slaughter",
+    "trait_incarnation_of_slaughter_desc": "Total kills reach 100,000, forming a cursed field.",
+    "trait_incarnation_of_slaughter_description": "Total kills reach 100,000, forming a cursed field.",
+    "trait_incarnation_of_slaughter_tooltip": "Total kills reach 100,000, forming a cursed field.",
+    "trait_incarnation_of_slaughter_info": "Total kills reach 100,000, forming a cursed field.",
+
+    "trait_world_eater": "World Eater",
+    "trait_world_eater_desc": "Has both Flesh of the Divine and Incarnation of Slaughter; begins devouring the world.",
+    "trait_world_eater_description": "Has both Flesh of the Divine and Incarnation of Slaughter; begins devouring the world.",
+    "trait_world_eater_tooltip": "Has both Flesh of the Divine and Incarnation of Slaughter; begins devouring the world.",
+    "trait_world_eater_info": "Has both Flesh of the Divine and Incarnation of Slaughter; begins devouring the world.",
+
+    "trait_ascended_one": "Ascended One",
+    "trait_ascended_one_desc": "Won the ritual; transformed into a great demon or Dao Master.",
+    "trait_ascended_one_description": "Won the ritual; transformed into a great demon or Dao Master.",
+    "trait_ascended_one_tooltip": "Won the ritual; transformed into a great demon or Dao Master.",
+    "trait_ascended_one_info": "Won the ritual; transformed into a great demon or Dao Master.",
+
+    "trait_fallen_ascension": "Fallen Ascension",
+    "trait_fallen_ascension_desc": "Ascension ritual mishap; twisted form.",
+    "trait_fallen_ascension_description": "Ascension ritual mishap; twisted form.",
+    "trait_fallen_ascension_tooltip": "Ascension ritual mishap; twisted form.",
+    "trait_fallen_ascension_info": "Ascension ritual mishap; twisted form.",
+
+    "trait_godslayer": "Godslayer",
+    "trait_godslayer_desc": "Slew an Ascended One while mortal.",
+    "trait_godslayer_description": "Slew an Ascended One while mortal.",
+    "trait_godslayer_tooltip": "Slew an Ascended One while mortal.",
+    "trait_godslayer_info": "Slew an Ascended One while mortal.",
+
+    "trait_eternal_legend": "Eternal Legend",
+    "trait_eternal_legend_desc": "Stands atop the world with no external aid.",
+    "trait_eternal_legend_description": "Stands atop the world with no external aid.",
+    "trait_eternal_legend_tooltip": "Stands atop the world with no external aid.",
+    "trait_eternal_legend_info": "Stands atop the world with no external aid.",
+
+    "trait_rogue_kill_plus_one": "Battle Reaper",
+    "trait_rogue_kill_plus_one_desc": "On kill, gain +1 extra kill (light snowball).",
+    "trait_rogue_kill_plus_one_description": "On kill, gain +1 extra kill (light snowball).",
+    "trait_rogue_kill_plus_one_tooltip": "On kill, gain +1 extra kill (light snowball).",
+    "trait_rogue_kill_plus_one_info": "On kill, gain +1 extra kill (light snowball).",
+
+    "trait_rogue_kill_lucky10": "Lucky Plunder",
+    "trait_rogue_kill_lucky10_desc": "On kill, 1% chance to gain +10 extra kills (occasional jackpot).",
+    "trait_rogue_kill_lucky10_description": "On kill, 1% chance to gain +10 extra kills (occasional jackpot).",
+    "trait_rogue_kill_lucky10_tooltip": "On kill, 1% chance to gain +10 extra kills (occasional jackpot).",
+    "trait_rogue_kill_lucky10_info": "On kill, 1% chance to gain +10 extra kills (occasional jackpot).",
+
+    "trait_rogue_starter_boost": "Starter Boost",
+    "trait_rogue_starter_boost_desc": "Begin with a small boost to health and damage.",
+    "trait_rogue_starter_boost_description": "Begin with a small boost to health and damage.",
+    "trait_rogue_starter_boost_tooltip": "Begin with a small boost to health and damage.",
+    "trait_rogue_starter_boost_info": "Begin with a small boost to health and damage.",
+
+    "trait_rogue_swift": "Swift",
+    "trait_rogue_swift_desc": "Slightly increased movement speed.",
+    "trait_rogue_swift_description": "Slightly increased movement speed.",
+    "trait_rogue_swift_tooltip": "Slightly increased movement speed.",
+    "trait_rogue_swift_info": "Slightly increased movement speed.",
+
+    "trait_rogue_keen": "Keen",
+    "trait_rogue_keen_desc": "Slightly increased critical chance.",
+    "trait_rogue_keen_description": "Slightly increased critical chance.",
+    "trait_rogue_keen_tooltip": "Slightly increased critical chance.",
+    "trait_rogue_keen_info": "Slightly increased critical chance.",
+
+    "trait_rogue_tough": "Tough",
+    "trait_rogue_tough_desc": "Slightly increased armor.",
+    "trait_rogue_tough_description": "Slightly increased armor.",
+    "trait_rogue_tough_tooltip": "Slightly increased armor.",
+    "trait_rogue_tough_info": "Slightly increased armor.",
+
+    "trait_rogue_enduring": "Enduring",
+    "trait_rogue_enduring_desc": "Slightly increased stamina cap.",
+    "trait_rogue_enduring_description": "Slightly increased stamina cap.",
+    "trait_rogue_enduring_tooltip": "Slightly increased stamina cap.",
+    "trait_rogue_enduring_info": "Slightly increased stamina cap.",
+
+    "trait_rogue_longlife": "Longevity",
+    "trait_rogue_longlife_desc": "Increased natural lifespan.",
+    "trait_rogue_longlife_description": "Increased natural lifespan.",
+    "trait_rogue_longlife_tooltip": "Increased natural lifespan.",
+    "trait_rogue_longlife_info": "Increased natural lifespan.",
+
+    "trait_rogue_lightstrike": "Lightstrike",
+    "trait_rogue_lightstrike_desc": "Small increase to base damage.",
+    "trait_rogue_lightstrike_description": "Small increase to base damage.",
+    "trait_rogue_lightstrike_tooltip": "Small increase to base damage.",
+    "trait_rogue_lightstrike_info": "Small increase to base damage.",
+
+    "trait_rogue_guarded": "Guarded",
+    "trait_rogue_guarded_desc": "Small increase to max health.",
+    "trait_rogue_guarded_description": "Small increase to max health.",
+    "trait_rogue_guarded_tooltip": "Small increase to max health.",
+    "trait_rogue_guarded_info": "Small increase to max health.",
+
+    "trait_rogue_heal_on_kill": "Heal on Kill",
+    "trait_rogue_heal_on_kill_desc": "Restore a small amount of health after a kill.",
+    "trait_rogue_heal_on_kill_description": "Restore a small amount of health after a kill.",
+    "trait_rogue_heal_on_kill_tooltip": "Restore a small amount of health after a kill.",
+    "trait_rogue_heal_on_kill_info": "Restore a small amount of health after a kill."
 }
