--- a/Locales/cz.json
+++ b/Locales/cz.json
@@ -2,7 +2,7 @@
     "BiaoTi": "排行榜",
     "DM": "恶魔模式",
     "DM Description": "切换到恶魔模式或正常模式",
-    "AF": "自动收藏（≥10000战力且上榜）",
+    "AF": "自动收藏",
     "AF Description": "开启后符合条件的单位会自动收藏",
     "Modset": "Mod设置",
     "WAR_YEARS": "强制宣战间隔（年）",
